# BountyHunter

./: .dockerignore  .editorconfig  .env.example  .env.template  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  mise.toml  pyproject.toml  pytest.ini  requirements.txt  test_smoke.py
scripts/: docker_run.py  tasks.py
src/bounty_core/: __init__.py  constants.py  epic.py  epic_api_manager.py  exceptions.py  fetcher.py  gog.py  gog_api_manager.py  itad_api_manager.py  itch.py  itch_api_manager.py  network.py  parser.py  ps.py  ps_api_manager.py  rate_limiter.py  steam.py  steam_api_manager.py  store.py  utils.py
src/bounty_core/db/: engine.py  models.py
src/bounty_discord/: PLAN.md  __init__.py  bot.py  config.py  gunship.py  logging_config.py  run.py  sector_scanner.py  utils.py
src/bounty_discord/cogs/: admin.py  beacons.py  codex.py  visor.py
src/bounty_discord/modules/: sector_scanner.py
src/free_games_core/: __init__.py  fetcher.py  parser.py  steam.py  store.py
src/free_games_discord/: __init__.py  bot.py  config.py  logging_config.py  run.py
tests/: conftest.py  test_codex.py  test_db_store.py  test_discord_utils.py  test_gunship.py  test_integration.py  test_parser.py  test_parser_extended.py  test_rate_limiter.py  test_resolve_game_details.py  test_sector_scanner.py  test_visor.py
