[project]
name = "bountyhunter"
version = "0.1.0"
description = "A Discord bot that hunts for free games on Bluesky and Steam."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord.py",
    "aiohttp",
    "aiosqlite",
    "python-dotenv",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pyright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bounty_core", "src/bounty_discord"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".gemini"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
exclude = [
    ".gemini",
    ".venv",
    "**/__pycache__",
    ".git"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
