[project]
name = "bountyhunter"
version = "0.1.0"
description = "A Discord bot that hunts for free games on Bluesky and Steam."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord.py",
    "aiohttp",
    "aiosqlite",
    "python-dotenv",
    "beautifulsoup4",
    "feedparser>=6.0.12",
    "colorama>=0.4.6",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pyright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bounty_core", "src/bounty_discord"]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [".gemini"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
exclude = [
    ".gemini",
    ".venv",
    "**/__pycache__",
    ".git"
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
]
